💄 Fix the spacing between icon and title in panel descriptions

--- a/frontend/src/app/features/main-page/main-page-properties/main-page-properties.component.scss
+++ b/frontend/src/app/features/main-page/main-page-properties/main-page-properties.component.scss
@@ -39,3 +39,13 @@ section[role='filters'] {
     grid-area: list;
   }
 }
+
+mat-panel-description {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+}
+
+mat-icon {
+  overflow: unset;
+}
